1.11 ()

  - When within a MultiCheck a single check causes an exception, the
    other checks are now still present in the output of check_jmx4perl
    and the overall check has the status UNKNWON (#40)
  - Minor fixes on the WebSphere Checks

1.10 (2014-06-30)

  - Added WebSphere checks

1.08 (2014-06-30)
  - Fixed warning when using MBeanName (#31)
  - Fixed BaseMBean and formatting
  - Fixed relative checks when using MBean patterns
  - Added formatter '%q' to include a ratio of value to base without
    multiplying by 100 like for '%r'
  - Disabled OpenPGPVerifier since it doesn't support the new digest
    algorithms used for signing the Jolokia artefacts (#32)
  - Don't set ssl_opts if on LWP < 6 (#28)
  - Fixed BaseMBean and BaseAttribute config directives (#25)
  - Fixed regexp for squeezing trailing slashes (RT#89108)
  - Fixed check definition for 'wls_channel_connections (RT#89107)
  - Changed check 'memory_gc_time' to be a relative check to measure the 
    relative amount taken for the GC. If you use this check (or a sub-check of this)
    YOU NEED TO UPDATE YOUR THRESHOLDS (and regenerate the pn4p graphics) if you use this 
    check directly
  - Fixed bug when using 0 thresholds in checks using parent checks (#38)
  - Added support for '*' wildcard when navigation with cd for j4psh 
  - Fixed bug with check inheritance and check parameters which contain parantheses
  - Added an option "MultiCheckPrefix" for "Checks" in order to specify the prefix 
    for multi checks 
  - Added config options "SummaryOk" and "SummaryFailure" for allowing to fine tune 
    multi check output (#24)
  - "Argument" can be used in "Operation" config checks for providing arguments to 
    Nagios checks which are based on operations (#27)

1.07 (2013-04-16) 
  - Added more robust timeout for the Jmx4Perl Agent (requires Sys::SigAction)
  - SSL Host key verification switched off when connecting via SSL
  - Fixed issue with quoting in j4psh (#14)