@@ -61,7 +61,7 @@
    "provides" : {
       "JMX::Jmx4Perl" : {
          "file" : "lib/JMX/Jmx4Perl.pm",
-         "version" : "1.11_1"
+         "version" : "1.11_2"
       },
       "JMX::Jmx4Perl::Agent" : {
          "file" : "lib/JMX/Jmx4Perl/Agent.pm",
@@ -266,5 +266,5 @@
          "http://opensource.org/licenses/gpl-license.php"
       ]
    },
-   "version" : "1.11_1"
+   "version" : "1.11_2"
 }
